--- a/modlist.html
+++ b/modlist.html
@@ -41,6 +41,7 @@
 <li><a href="https://www.curseforge.com/projects/32274">JourneyMap (by Techbrew, Mysticdrew)</a></li>
 <li><a href="https://www.curseforge.com/projects/351264">Kotlin for Forge</a></li>
 <li><a href="https://www.curseforge.com/projects/238086">KubeJS (by LatvianModder)</a></li>
+<li><a href="https://www.curseforge.com/projects/1141738">KubeJS Immersive Engineering UNOFFICIAL (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/projects/570630">LootJS: KubeJS Addon (by AlmostReliable)</a></li>
 <li><a href="https://www.curseforge.com/projects/1026040">Mekanism Extras (by Lost Myself)</a></li>
 <li><a href="https://www.curseforge.com/projects/790626">ModernFix (by embeddedt)</a></li>
